started booking form implementation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import url(./components/buttons.css);
 @import url(./abstracts/colors.css);
 @import url(./components/header.css);
+@import url(./components/eventsDisplay.css);
 
 
 *, *::before, *::after {
