added booking form open and closing functions

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @import url(./abstracts/colors.css);
 @import url(./components/header.css);
 @import url(./components/eventsDisplay.css);
+@import url(./components/bookingForm.css);
 
 
 *, *::before, *::after {
